@@ -51,14 +51,13 @@ if {![file exists $httpdFile]} {
     set removeHttpd 1
 }
 
-if {[info commands testthread] == "testthread" && [file exists $httpdFile]} {
-    set httpthread [testthread create "
-	source [list $httpdFile]
-	testthread wait
-    "]
-    testthread send $httpthread [list set port $port]
-    testthread send $httpthread [list set bindata $bindata]
-    testthread send $httpthread {httpd_init $port}
+catch {package require Thread 2.6}
+if {[catch {package present Thread}] == 0 && [file exists $httpdFile]} {
+    set httpthread [thread::create -preserved]
+    thread::send $httpthread [list source $httpdFile]
+    thread::send $httpthread [list set port $port]
+    thread::send $httpthread [list set bindata $bindata]
+    thread::send $httpthread {httpd_init $port}
     puts "Running httpd in thread $httpthread"
 } else {
     if {![file exists $httpdFile]} {
@@ -590,9 +589,7 @@ catch {unset badurl}
 catch {unset port}
 catch {unset data}
 if {[info exists httpthread]} {
-    testthread send -async $httpthread {
-	testthread exit
-    }
+    thread::release $httpthread
 } else {
     close $listen
 }
